Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><a href="easy100.sudo">easy 100</a></p>
+        <p><a href="https://github.com/downloads/gamesky/sudoku-puzzles/easy100.sudu">easy 100</a></p>
       </section>
     </div>
 
