Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><a href="https://github.com/downloads/gamesky/sudoku-puzzles/gnome-sudoku_easy.opensudoku">Easy - 100 puzzles</a></p>
+        <p><a href="https://github.com/downloads/gamesky/sudoku-puzzles/gnome-sudoku_easy.opensudoku">容易 - 100 puzzles</a>
+<a href="https://github.com/downloads/gamesky/sudoku-puzzles/gnome-sudoku_medium.opensudoku">中级 - 100 puzzles</a>
+<a href="https://github.com/downloads/gamesky/sudoku-puzzles/gnome-sudoku_hard.opensudoku">稍难 - 100 puzzles</a>
+<a href="https://github.com/downloads/gamesky/sudoku-puzzles/gnome-sudoku_very_hard.opensudoku">很难 - 100 puzzles</a></p>
       </section>
     </div>
 
